--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-jss": "^8.6.1",
     "react-redux": "^6.0.0",
     "react-slick": "^0.23.2",
+    "react-star-rating-component": "^1.4.1",
     "react-star-ratings": "^2.3.0",
     "react-stars": "^2.2.5",
     "react-tap-event-plugin": "^3.0.3",
